--- a/src/index.hbs
+++ b/src/index.hbs
@@ -91,10 +91,10 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, hic dignissimos veritatis rerum natus voluptas vel maxime ullam quia voluptatibus.
               </p> --}}
 
-              <p class="btn locked">
-                {{> lock
+              <p class="btn">
+                {{> eye
                 }}
-                unlocked 23.07.2021
+                deep dive
               </p>
             </div>
           </div>
@@ -118,10 +118,10 @@
               {{!-- <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, hic dignissimos veritatis rerum natus voluptas vel maxime ullam quia voluptatibus.
               </p> --}}
-              <p class="btn locked">
-                {{> lock
+              <p class="btn">
+                {{> eye
                 }}
-                unlocked 23.07.2021
+                deep dive
               </p>
             </div>
           </div>
@@ -142,10 +142,10 @@
               <div class="card__bg"></div>
               <p class="meta">Assignment 3</p>
               <h2>Wireframing</h2>
-              <p class="btn locked">
-                {{> lock
+              <p class="btn">
+                {{> eye
                 }}
-                unlocked 23.07.2021
+                deep dive
               </p>
             </div>
           </div>
@@ -166,10 +166,10 @@
               <div class="card__bg"></div>
               <p class="meta">Assignment 4</p>
               <h2>Visual Design</h2>
-              <p class="btn locked btn-2">
-                {{> lock
+              <p class="btn">
+                {{> eye
                 }}
-                unlocked 23.07.2021
+                deep dive
               </p>
             </div>
           </div>
@@ -213,10 +213,10 @@
               <div class="card__bg"></div>
               <p class="meta">Assignment 6</p>
               <h2>Design reflections</h2>
-              <p class="btn locked btn-2">
-                {{> lock
+              <p class="btn">
+                {{> eye
                 }}
-                unlocked 23.07.2021
+                deep dive
               </p>
             </div>
           </div>
