--- a/src/partials/desc-1.hbs
+++ b/src/partials/desc-1.hbs
@@ -9,18 +9,33 @@
             Assignment 1
           </p>
           <h2>
-            Idea Pitch
+            Idea Pitching
           </h2>
+        </div>
+      </div>
+
+
+      <div class="row">
+        <div class="col-md-8 offset-md-4">
+          <div class="btn-container">
+            <a href="/images/01_Pitch.pdf" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> download }}
+              <span>download</span>
+            </a>
+          </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            In this assignment it was all about defining our idea and finding a way to work on it as a team.
-            We initially struggled with combing the expertise from all of us, because we had different background and competences.
-            Everyone had another approach and vision for the project. Especially designwise. <br><br>
-            The first step for us was to figure out the main issues that we wanted to tackle.
+            We had a long discussion about what we want to design in this lecture.
+            After we formed teams for different tasks, we needed to conclude all
+            ideas and sum them up. We all agreed on the topic climate change but
+            also wanted to create something special and innovative. So we decided
+            to design a climate-friendly website builder called “build-tomorrow”
+            where our users really can see their impact and not only theoretically
+            have some recommendations.
           </p>
         </div>
       </div>
@@ -86,10 +101,11 @@
       <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illum iure consequatur
-            officiis sint quidem vero tenetur alias deleniti ipsum aut praesentium ullam saepe
-            necessitatibus recusandae quaerat numquam, minus minima quod repudiandae molestias
-            aliquid! Necessitatibus quos laboriosam pariatur iure ad.
+            This is the reason why we have cancelled our plan to design a checklist,
+            because it's just not for everyone. While this checklist would be quite
+            handy for developers, most of the users are not going to be experienced
+            and therefore would end up overwhelmed by the system. In general a website
+            builder is the tool to reach most people and have the biggest climate impact.
           </p>
         </div>
       </div>
