--- a/src/partials/desc-2.hbs
+++ b/src/partials/desc-2.hbs
@@ -16,57 +16,40 @@
       </div>
 
       <div class="row">
+        <div class="col-md-8 offset-md-4">
+          <div class="btn-container">
+            <a href="https://xd.adobe.com/view/b2b7676f-2726-4b4b-984c-a59066f19d0d-e7e4/?fullscreen" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> click }}
+              <span>
+                launch prototype
+              </span>
+            </a>
+            <a href="/images/02_LowFidelityPresentation.pdf" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> download }}
+              <span>download</span>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            In this assignment it was all about defining our idea and finding a way to work on it as a team.
-            We initially struggled with combing the expertise from all of us, because we had different background and competences.
-            Everyone had another approach and vision for the project. Especially designwise. <br><br>
-            The first step for us was to figure out the main issues that we wanted to tackle.
+            Based on our ideas, we created a low-fidelity prototype.
+            The goal was to structure all our ideas and assign them
+            into logical groups. During the creation process, new ideas
+            kept coming up and we integrated them directly. We wanted to
+            make it possible for users to create a website within a short
+            time without any prior knowledge.
           </p>
         </div>
-      </div>
-
-      <div class="row">
         <div class="col-md-4">
-          <div class="description__info">
-            <div class="description__info__inner">
-              <h3>
-                Introducing <br> personas
-              </h3>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="threeSlide swiperSlide">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Barbera Metzler
-                  </p>
-                  <img src="images/assignment1/world.png">
-                  <ul>
-                    <li>Works for a small company</li>
-                    <li>Her company recycles old plastic bottles  </li>
-                    <li>Values ​​sustainability </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-              {{!-- <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div> --}}
-              {{!-- <div class="swiper-scrollbar"></div> --}}
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4 offset-md-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illum iure consequatur
-            officiis sint quidem vero tenetur alias deleniti ipsum aut praesentium ullam saepe
-            necessitatibus recusandae quaerat numquam, minus minima quod repudiandae molestias
-            aliquid! Necessitatibus quos laboriosam pariatur iure ad.
+            Our focus in development was to optimize the landing process
+            for the website and therefore assure that the website is appealing
+            from the very first sight. We asked ourselves how we could welcome
+            a new user to our builder as easy as possible. The solution is our
+            onboarding flow with our hands-on tutorial.
           </p>
         </div>
       </div>
@@ -85,28 +68,28 @@
           <div class="oneSlide">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="images/assignment2/LowFidelityPresentation_Page_1.jpg">
+                <img src="images/assignment2/02_LowFidelityPresentation_Page_1.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment2/LowFidelityPresentation_Page_2.jpg">
+                <img src="images/assignment2/02_LowFidelityPresentation_Page_2.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment2/LowFidelityPresentation_Page_3.jpg">
+                <img src="images/assignment2/02_LowFidelityPresentation_Page_3.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment2/LowFidelityPresentation_Page_4.jpg">
+                <img src="images/assignment2/02_LowFidelityPresentation_Page_4.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment2/LowFidelityPresentation_Page_5.jpg">
+                <img src="images/assignment2/02_LowFidelityPresentation_Page_5.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment2/LowFidelityPresentation_Page_6.jpg">
+                <img src="images/assignment2/02_LowFidelityPresentation_Page_6.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment2/LowFidelityPresentation_Page_7.jpg">
+                <img src="images/assignment2/02_LowFidelityPresentation_Page_7.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment2/LowFidelityPresentation_Page_8.jpg">
+                <img src="images/assignment2/02_LowFidelityPresentation_Page_8.jpg">
               </div>
             </div>
               {{!-- <div class="swiper-button-next"></div>
