--- a/src/partials/desc-3.hbs
+++ b/src/partials/desc-3.hbs
@@ -9,93 +9,48 @@
             Assignment 3
           </p>
           <h2>
-            Wireframing
+            Wireframe
           </h2>
         </div>
       </div>
 
       <div class="row">
-        <a href="https://xd.adobe.com/view/a788fb4a-0a4a-40ae-9b77-0bbb558e2498-f2db/?fullscreen" target="_blank" rel="noopener" class="btn">
-          launch prototype
-        </a>
+        <div class="col-md-8 offset-md-4">
+          <div class="btn-container">
+            <a href="https://xd.adobe.com/view/a788fb4a-0a4a-40ae-9b77-0bbb558e2498-f2db/?fullscreen" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> click }}
+              <span>
+                launch prototype
+              </span>
+            </a>
+            <a href="/images/Assignment3.pdf" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> download }}
+              <span>
+                download
+              </span>
+            </a>
+          </div>
+        </div>
       </div>
 
       <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            In this assignment it was all about defining our idea and finding a way to work on it as a team.
-            We initially struggled with combing the expertise from all of us, because we had different background and competences.
-            Everyone had another approach and vision for the project. Especially designwise. <br><br>
-            The first step for us was to figure out the main issues that we wanted to tackle.
+            While developing the wireframe, we had three primary goals. The first goal was to be as
+            resource-efficient as possible. We decided to use vector graphics instead of images and
+            structured our tool with a lot of reused components. With this technique we can save css
+            code by reusing the same as much as possible. The second goal was to make the website easy
+            to use. The builder should not be bloated with too many UI elements at first sight and only
+            the most important ones should be displayed.
           </p>
         </div>
-      </div>
-
-      <div class="row">
         <div class="col-md-4">
-          <div class="description__info">
-            <div class="description__info__inner">
-              <h3>
-                Core issues we saw <br> and wanted to tackle
-              </h3>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="threeSlide swiperSlide">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Pollution
-                  </p>
-                  <img src="images/assignment1/world.png">
-                  <p>
-                    If the internet was a country it would be
-                    the sixth greatest polluter globally.
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Consumption
-                  </p>
-                  <img src="images/assignment1/smoke.png">
-                  <p>
-                    The average web page today produces 1.76 grams CO2 per page
-                  view. For a website with 10,000 monthly page views, that’s 211 kg CO2
-                  per year.
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Solution
-                  </p>
-                  <img src="images/assignment1/bulb.png">
-                  <p>
-                    Coming up with a design standard everybody can use to design and develop a greener,
-                    more climate friendlier digital world
-                  </p>
-                </div>
-              </div>
-            </div>
-              {{!-- <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div> --}}
-              {{!-- <div class="swiper-scrollbar"></div> --}}
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4 offset-md-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illum iure consequatur
-            officiis sint quidem vero tenetur alias deleniti ipsum aut praesentium ullam saepe
-            necessitatibus recusandae quaerat numquam, minus minima quod repudiandae molestias
-            aliquid! Necessitatibus quos laboriosam pariatur iure ad.
+            With the given navigation the user can then find the more complex (and therefore less frequently used) features.
+            The final goal was to visualize the direct impact of the user's actions. We implemented
+            our emission tracker which shows a lot of interesting data about the climate friendliness
+            of the website. With these optimizations we created a better user experience and also strongly
+            integrated the sustainability factor.
           </p>
         </div>
       </div>
@@ -114,43 +69,49 @@
           <div class="oneSlide">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_1.jpg">
+                <img src="images/assignment3/Assignment3_Page_01.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_2.jpg">
+                <img src="images/assignment3/Assignment3_Page_02.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_3.jpg">
+                <img src="images/assignment3/Assignment3_Page_03.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_4.jpg">
+                <img src="images/assignment3/Assignment3_Page_04.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_5.jpg">
+                <img src="images/assignment3/Assignment3_Page_05.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_6.jpg">
+                <img src="images/assignment3/Assignment3_Page_06.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_7.jpg">
+                <img src="images/assignment3/Assignment3_Page_07.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_8.jpg">
+                <img src="images/assignment3/Assignment3_Page_08.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_9.jpg">
+                <img src="images/assignment3/Assignment3_Page_09.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_10.jpg">
+                <img src="images/assignment3/Assignment3_Page_10.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_11.jpg">
+                <img src="images/assignment3/Assignment3_Page_11.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_12.jpg">
+                <img src="images/assignment3/Assignment3_Page_12.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_13.jpg">
+                <img src="images/assignment3/Assignment3_Page_13.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="images/assignment3/Assignment3_Page_13.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="images/assignment3/Assignment3_Page_13.jpg">
               </div>
             </div>
               {{!-- <div class="swiper-button-next"></div>
