--- a/src/partials/desc-4.hbs
+++ b/src/partials/desc-4.hbs
@@ -15,25 +15,36 @@
       </div>
 
       <div class="row">
-        <div class="col-md-4 offset-md-4">
-          <p>
-            In this assignment it was all about defining our idea and finding a way to work on it as a team.
-            We initially struggled with combing the expertise from all of us, because we had different background and competences.
-            Everyone had another approach and vision for the project. Especially designwise. <br><br>
-            The first step for us was to figure out the main issues that we wanted to tackle.
-          </p>
+        <div class="col-md-8 offset-md-4">
+          <div class="btn-container">
+            <a href="https://xd.adobe.com/view/3a4e7959-18b4-4f16-a96c-acb1ab76acef-6f1d/?fullscreen" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> click }}
+              <span>
+                launch GUI kit
+              </span>
+            </a>
+            <a href="/images/03_about-tomorrow.de_PresentationVisualDesign.pdf" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> download }}
+              <span>download</span>
+            </a>
+          </div>
         </div>
       </div>
-
-
 
       <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illum iure consequatur
-            officiis sint quidem vero tenetur alias deleniti ipsum aut praesentium ullam saepe
-            necessitatibus recusandae quaerat numquam, minus minima quod repudiandae molestias
-            aliquid! Necessitatibus quos laboriosam pariatur iure ad.
+            For the visual design we also used the three primary goals, we mentioned in Assignment 3.
+            We designed an UI Kit for all important design guidelines in our high fidelity prototype.
+            Our UI Kit contains fonts, font sizes, spacings, states and colors.
+
+          </p>
+        </div>
+        <div class="col-md-4">
+          <p>
+            All design choices were thoughtfully made with our product and target audience in mind.
+            In this phase we also added first animations to enhance the visual appeal of the builder.
+            For example button and text field animations.
           </p>
         </div>
       </div>
@@ -43,7 +54,7 @@
           <div class="description__info">
             <div class="description__info__inner">
               <h3>
-                Final presentation <br> for assignment 1
+                Final presentation <br> for assignment 4
               </h3>
             </div>
           </div>
@@ -52,43 +63,34 @@
           <div class="oneSlide">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_1.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_01.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_2.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_02.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_3.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_03.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_4.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_04.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_5.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_05.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_6.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_06.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_7.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_07.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_8.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_08.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_9.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_09.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_10.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_11.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_12.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_13.jpg">
+                <img src="images/assignment4/03_about-tomorrow.de_PresentationVisualDesign_Page_10.jpg">
               </div>
             </div>
               {{!-- <div class="swiper-button-next"></div>
