--- a/src/partials/desc-5.hbs
+++ b/src/partials/desc-5.hbs
@@ -24,6 +24,12 @@
                 launch prototype
               </span>
             </a>
+            <a href="/images/05_Final_Presentation_About_Tomorrow.pdf" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> download }}
+              <span>
+                download
+              </span>
+            </a>
           </div>
         </div>
       </div>
@@ -31,9 +37,9 @@
       <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            Et violá! This is our production ready, high fidelity Prototype.
-            Our goal was it to create a simple, organized and environmental friendly website builder for all of our users.
-            It's designed to quickly create easy, advanced and most importantly climate friendly websites.
+            During the development of the High-Fidelity Prototype, we focused on how to
+            communicate with our users through visual design. We applied the previously
+            created UI kit to all our screens.
           </p>
         </div>
       </div>
@@ -64,8 +70,8 @@
                 <img src="/images/assignment5/component_4.png" alt="Component of emission tracker that shows what is using data">
               </div>
             </div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
+              {{!-- <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div> --}}
               {{!-- <div class="swiper-scrollbar"></div> --}}
           </div>
         </div>
@@ -74,8 +80,8 @@
       <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            The key component is our Emission Tracker, which shows the footprint, used data and a live comparison between other webpages. You can have a look at the different components below.
-            We care about tomorrow, so help us to improve the world!
+            To improve the usability we integrated different animations and added some new screens to the
+            prototype. In the end, we connected everything and created our fully functional high-fidelity prototype.
           </p>
         </div>
       </div>
@@ -85,8 +91,7 @@
           <div class="description__info">
             <div class="description__info__inner">
               <h3>
-                Sneak <br>
-                Peak
+                Final presentation <br> for assignment 5
               </h3>
             </div>
           </div>
@@ -95,20 +100,72 @@
           <div class="oneSlide">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <img src="/images/assignment5/website_2.png">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_01.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="/images/assignment5/website_1.png">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_02.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="/images/assignment5/editor_1.png">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_03.jpg">
               </div>
               <div class="swiper-slide">
-                <img src="/images/assignment5/editor_2.png">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_04.jpg">
               </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_05.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_06.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_07.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_08.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_09.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_10.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_11.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_12.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_13.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_14.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_15.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_16.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_17.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_18.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_19.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_20.jpg">
+              </div>
+              <div class="swiper-slide">
+                <img src="/images/assignment5/05_Final_Presentation_About_Tomorrow_Page_21.jpg">
+              </div>
+
             </div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
+              {{!-- <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div> --}}
               {{!-- <div class="swiper-scrollbar"></div> --}}
           </div>
         </div>
