--- a/src/partials/desc-6.hbs
+++ b/src/partials/desc-6.hbs
@@ -9,76 +9,18 @@
             Assignment 6
           </p>
           <h2>
-            Design reflections
+            Design reflection
           </h2>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-4 offset-md-4">
-          <p>
-            In this assignment it was all about defining our idea and finding a way to work on it as a team.
-            We initially struggled with combing the expertise from all of us, because we had different background and competences.
-            Everyone had another approach and vision for the project. Especially designwise. <br><br>
-            The first step for us was to figure out the main issues that we wanted to tackle.
-          </p>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-4">
-          <div class="description__info">
-            <div class="description__info__inner">
-              <h3>
-                Core issues we saw <br> and wanted to tackle
-              </h3>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="threeSlide swiperSlide">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Pollution
-                  </p>
-                  <img src="images/assignment1/world.png">
-                  <p>
-                    If the internet was a country it would be
-                    the sixth greatest polluter globally.
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Consumption
-                  </p>
-                  <img src="images/assignment1/smoke.png">
-                  <p>
-                    The average web page today produces 1.76 grams CO2 per page
-                  view. For a website with 10,000 monthly page views, that’s 211 kg CO2
-                  per year.
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="description__card">
-                  <p class="description__card__meta">
-                    Solution
-                  </p>
-                  <img src="images/assignment1/bulb.png">
-                  <p>
-                    Coming up with a design standard everybody can use to design and develop a greener,
-                    more climate friendlier digital world
-                  </p>
-                </div>
-              </div>
-            </div>
-              {{!-- <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div> --}}
-              {{!-- <div class="swiper-scrollbar"></div> --}}
+        <div class="col-md-8 offset-md-4">
+          <div class="btn-container">
+            <a href="/images/UID_06_Doku.pdf" target="_blank" rel="noopener" class="btn btn--launch">
+              {{> download }}
+              <span>download</span>
+            </a>
           </div>
         </div>
       </div>
@@ -86,70 +28,88 @@
       <div class="row">
         <div class="col-md-4 offset-md-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis illum iure consequatur
-            officiis sint quidem vero tenetur alias deleniti ipsum aut praesentium ullam saepe
-            necessitatibus recusandae quaerat numquam, minus minima quod repudiandae molestias
-            aliquid! Necessitatibus quos laboriosam pariatur iure ad.
+            During the development of the High-Fidelity Prototype, we focused
+            on how to communicate with our users through visual design. We applied
+            the previously created UI kit to all our screens. To improve the usability
+            we integrated different animations and added some new screens to the prototype.
+            In the end, we connected everything and created our fully functional
+            high-fidelity prototype.
           </p>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-md-4">
-          <div class="description__info">
-            <div class="description__info__inner">
-              <h3>
-                Final presentation <br> for assignment 1
-              </h3>
-            </div>
+        <div class="col-md-8 offset-md-4">
+          <div class="text-img-container">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-4.418 0-8 3.582-8 8v8c0 4.418 3.582 8 8 8s8-3.582 8-8v-8c0-4.418-3.582-8-8-8zm0 7.5c-.829 0-1.5-.672-1.5-1.5s.671-1.5 1.5-1.5 1.5.672 1.5 1.5-.671 1.5-1.5 1.5z"/></svg>
+            <h3>
+              scroll down for animation videos
+            </h3>
           </div>
         </div>
-        <div class="col-md-8">
-          <div class="oneSlide">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_1.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_2.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_3.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_4.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_5.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_6.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_7.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_8.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_9.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_10.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_11.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_12.jpg">
-              </div>
-              <div class="swiper-slide">
-                <img src="images/assignment1/about_tomorrow_pitch1024_13.jpg">
-              </div>
-            </div>
-              {{!-- <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div> --}}
-              {{!-- <div class="swiper-scrollbar"></div> --}}
+      </div>
+
+      <div class="video-container">
+        <div class="row">
+          <div class="col-md-4">
+            <h3>
+              Registration process
+            </h3>
+          </div>
+          <div class="col-md-8">
+            <video controls src="/images/Registration.mp4"></video>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-container">
+        <div class="row">
+          <div class="col-md-4">
+            <h3>
+              Registration process <br> with Google
+            </h3>
+          </div>
+          <div class="col-md-8">
+            <video controls src="/images/Registration_Google.mp4"></video>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-container">
+        <div class="row">
+          <div class="col-md-4">
+            <h3>
+              Onboarding process
+            </h3>
+          </div>
+          <div class="col-md-8">
+            <video controls src="/images/Onboarding.mp4"></video>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-container">
+        <div class="row">
+          <div class="col-md-4">
+            <h3>
+              Our Editor in action
+            </h3>
+          </div>
+          <div class="col-md-8">
+            <video controls src="/images/Editor.mp4"></video>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-container">
+        <div class="row">
+          <div class="col-md-4">
+            <h3>
+              Our key feature: <br> The emission tracker
+            </h3>
+          </div>
+          <div class="col-md-8">
+            <video controls src="/images/Emission_Tracker.mp4"></video>
           </div>
         </div>
       </div>
