--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -31,22 +31,22 @@
               </p>
               <ul>
                 <li>
-                  <a>assignment 1</a>
+                  <a href="/images/01_Pitch.pdf" target="_blank" rel="noopener">assignment 1</a>
                 </li>
                 <li>
-                  <a>assignment 2</a>
+                  <a href="/images/02_LowFidelityPresentation.pdf" target="_blank" rel="noopener">assignment 2</a>
                 </li>
                 <li>
-                  <a>assignment 3</a>
+                  <a href="/images/Assignment3.pdf" target="_blank" rel="noopener">assignment 3</a>
                 </li>
                 <li>
-                  <a>assignment 4</a>
+                  <a href="/images/03_about-tomorrow.de_PresentationVisualDesign.pdf" target="_blank" rel="noopener">assignment 4</a>
                 </li>
                 <li>
-                  <a>assignment 5</a>
+                  <a href="/images/05_Final_Presentation_About_Tomorrow.pdf" target="_blank" rel="noopener">assignment 5</a>
                 </li>
                 <li>
-                  <a>assignment 6</a>
+                  <a href="#" target="_blank" rel="noopener">assignment 6</a>
                 </li>
               </ul>
             </div>
