--- a/src/partials/head.hbs
+++ b/src/partials/head.hbs
@@ -26,7 +26,7 @@
 
     <!-- preload font -->
     {{!-- <link rel="preload" href="/fonts/apercu-regular-webfont.woff" as="font" type="font/woff2" crossorigin> --}}
-    <link rel="preload" href="/fonts/apercu-mono-webfont.woff" as="font" type="font/woff2" crossorigin>
+    {{!-- <link rel="preload" href="/fonts/apercu-mono-webfont.woff" as="font" type="font/woff2" crossorigin> --}}
 
     <!-- Stylesheets -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/fontawesome.css" rel="stylesheet">
@@ -41,5 +41,8 @@
 
     {{!-- custom cursor --}}
     <div class="custom-cursor-follow" id="custom-cursor-follow"></div>
+    <div class="custom-cursor-eye" id="custom-cursor-eye">
+      {{> eye }}
+    </div>
 
     {{> header }}
